fix(listCart): returned result is incorrect is fixed
